syntax = "proto3";
package pb;

message OrderCreateCommand {
    string order_id = 1;
    string customer_id = 2;
    string status = 3;
    int64 created_on = 4; // Date stores as unix int64 value
    string restaurant_id = 5;
    float amount = 6;

    message OrderItem {
        string code = 1;
        string name = 2;
        float unit_price = 3;
        int32 quantity = 4;
    }

    repeated OrderItem order_items = 7;
}

message OrderPaymentDebitedCommand {
    string order_id = 1;
    string customer_id = 2;
    float amount = 3;
}